--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "validate-protocol": "node scripts/validate-protocol.js"
+    "validate-protocol": "node scripts/validate-protocol.js",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,15 @@
   "homepage": "https://github.com/codaco/protocol-validation",
   "dependencies": {
     "ajv": "^6.10.0",
+    "babel-eslint": "7.2.3",
     "chalk": "^2.4.2",
-    "jszip": "^3.2.1"
+    "jszip": "^3.2.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-flowtype": "2.35.0",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "5.1.1"
   }
 }
