--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "eslint-plugin-react": "^7.11.1",
     "fs-extra": "^8.0.1",
     "jszip": "^3.2.1"
+  },
+  "devDependencies": {
+    "jest": "^24.8.0"
   }
 }
