--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
       "es6": true,
       "node": true
   },
+  "root": true,
   "parser": "babel-eslint",
   "parserOptions": {
       "ecmaVersion": 7,
