--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "protocol-validation",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "A utility for validating a Network Canvas protocol against a versioned JSON schema",
   "private": true,
   "engines": {
-    "node": "12.8.0",
-    "npm": "6.10.2"
+    "node": "12.14.1",
+    "npm": "7.6.3"
   },
   "main": "index.js",
   "scripts": {
@@ -40,6 +40,7 @@
     "jszip": "^3.2.1"
   },
   "devDependencies": {
-    "jest": "^24.8.0"
+    "jest": "^24.8.0",
+    "lodash": "^4.17.21"
   }
 }
