--- a/package.json
+++ b/package.json
@@ -37,10 +37,10 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "^7.11.1",
     "fs-extra": "^8.0.1",
-    "jszip": "^3.2.1"
+    "jszip": "^3.2.1",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "jest": "^24.8.0",
-    "lodash": "^4.17.21"
+    "jest": "^24.8.0"
   }
 }
