--- a/package.json
+++ b/package.json
@@ -1,12 +1,7 @@
 {
-  "name": "protocol-validation",
-  "version": "2.0.0",
+  "name": "@codaco/protocol-validation",
+  "version": "3.0.0-alpha.1",
   "description": "A utility for validating a Network Canvas protocol against a versioned JSON schema",
-  "private": true,
-  "engines": {
-    "node": "12.14.1",
-    "npm": "7.6.3"
-  },
   "main": "index.js",
   "scripts": {
     "validate-protocol": "node scripts/validate-protocol.js",
@@ -37,10 +32,10 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "^7.11.1",
     "fs-extra": "^8.0.1",
-    "jszip": "^3.2.1",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "jest": "^29.6.1"
+    "jest": "^29.6.1",
+    "prettier": "3.0.3"
   }
 }
