--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,33 +1,15 @@
 {
-  "extends": "airbnb",
   "env": {
-    "browser": true,
-    "commonjs": true,
-    "es6": true,
-    "node": true
+    "browser": false,
+    "node": true,
+    "es2021": true
   },
-  "root": true,
-  "parser": "babel-eslint",
+  "extends": [
+    "eslint:recommended",
+    "prettier"
+  ],
   "parserOptions": {
-    "ecmaVersion": 7,
-    "ecmaFeatures": {
-      "jsx": true,
-      "spread": true,
-      "experimentalObjectRestSpread": true,
-      "object-shorthand": ["error", "always"]
-    },
+    "ecmaVersion": "latest",
     "sourceType": "module"
-  },
-  "plugins": ["react"],
-  "rules": {
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "react/forbid-prop-types": "off",
-    "react/no-array-index-key": "off",
-    "jsx-a11y/no-static-element-interactions": "off",
-    "import/no-extraneous-dependencies": "off",
-    "import/no-named-as-default": "off",
-    "camelcase": "off",
-    "quote-props": "off",
-    "no-mixed-operators": [1, { "allowSamePrecedence": true }]
   }
 }
