--- a/package.json
+++ b/package.json
@@ -22,19 +22,13 @@
   "dependencies": {
     "ajv": "^6.10.0",
     "ajv-pack": "^0.3.1",
-    "babel-eslint": "7.2.3",
-    "chalk": "^2.4.2",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^15.0.1",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.35.0",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "^7.11.1",
+    "chalk": "^5.3.0",
     "fs-extra": "^8.0.1",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "eslint": "^8.50.0",
+    "eslint-config-prettier": "^9.0.0",
     "jest": "^29.6.1",
     "prettier": "3.0.3"
   }
