fix linting errors

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,10 @@
     "eslint:recommended",
     "prettier"
   ],
+  "ignorePatterns": [
+    "node_modules/",
+    "schemas/*.js"
+  ],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
