--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "validate-protocol": "node scripts/validate-protocol.js",
     "build": "node scripts/build-schemas.js",
     "lint": "eslint .",
-    "test": "jest --watch"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch"
   },
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/codaco/protocol-validation.git"
@@ -23,7 +24,7 @@
     "ajv": "^6.10.0",
     "ajv-pack": "^0.3.1",
     "chalk": "^5.3.0",
-    "fs-extra": "^8.0.1",
+    "fs-extra": "^11.1.1",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
