--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "ajv-pack": "^0.3.1",
     "chalk": "^5.3.0",
     "fs-extra": "^11.1.1",
-    "lodash": "^4.17.21"
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
-    "jest": "^29.6.1",
+    "jest": "^29.7.0",
     "prettier": "3.0.3"
   }
 }
