--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
   },
   "homepage": "https://github.com/codaco/protocol-validation",
   "dependencies": {
-    "ajv": "^6.10.0",
-    "ajv-pack": "^0.3.1",
     "chalk": "^5.3.0",
     "fs-extra": "^11.1.1",
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
+    "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
