--- a/package.json
+++ b/package.json
@@ -20,14 +20,12 @@
     "url": "https://github.com/codaco/protocol-validation/issues"
   },
   "homepage": "https://github.com/codaco/protocol-validation",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "chalk": "^5.3.0",
     "fs-extra": "^11.1.1",
-    "lodash-es": "^4.17.21"
-  },
-  "devDependencies": {
+    "lodash-es": "^4.17.21",
     "ajv": "^8.12.0",
-    "ajv-formats": "^2.1.1",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
