--- a/package.json
+++ b/package.json
@@ -1,41 +1,33 @@
 {
   "name": "@codaco/protocol-validation",
-  "version": "3.0.0-alpha.1",
-  "description": "A utility for validating a Network Canvas protocol against a versioned JSON schema",
-  "main": "schemas/index.js",
+  "version": "1.0.0",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "description": "",
   "scripts": {
-    "validate-protocol": "node scripts/validate-protocol.js",
-    "build": "node scripts/build-schemas.js",
-    "lint": "eslint .",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
-  },
-  "type": "module",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/codaco/protocol-validation.git"
-  },
-  "author": "Complex Data Collective",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/codaco/protocol-validation/issues"
-  },
-  "homepage": "https://github.com/codaco/protocol-validation",
-  "jest": {
-    "testEnvironment": "node",
-    "transform": {}
+    "build": "bun run build.mjs",
+    "dev": "bun --watch ./src/index.ts",
+    "prepublishOnly": "bun run build"
   },
   "files": [
-    "schemas"
+    "dist",
+    "src/schemas"
   ],
-  "dependencies": {},
   "devDependencies": {
-    "chalk": "^5.3.0",
-    "fs-extra": "^11.1.1",
-    "lodash-es": "^4.17.21",
-    "ajv": "^8.12.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "bun-plugin-dts": "^0.1.0",
+    "bun-types": "^1.0.1",
     "eslint": "^8.50.0",
-    "eslint-config-prettier": "^9.0.0",
-    "jest": "^29.7.0",
-    "prettier": "3.0.3"
+    "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "@codaco/shared-consts": "^0.0.2",
+    "@types/lodash-es": "^4.17.9",
+    "ajv": "^8.12.0",
+    "chalk": "^5.3.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "lodash-es": "^4.17.21",
+    "prettier": "^3.0.3"
   }
 }
