--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "@codaco/protocol-validation",
-  "version": "1.0.0",
+  "version": "3.0.0",
   "main": "dist/index.js",
+  "type": "module",
   "types": "dist/index.d.ts",
-  "description": "",
+  "description": "Utilities for validating and migrating Network Canvas protocol files.",
   "scripts": {
     "build": "bun run build.mjs",
     "dev": "bun --watch ./src/index.ts",
+    "test": "bun test",
     "prepublishOnly": "bun run build"
   },
   "files": [
-    "dist",
-    "src/schemas"
+    "dist"
   ],
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.4",
