--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
-    "bun-plugin-dts": "^0.1.0",
+    "bun-plugin-dts": "0.2.1",
     "bun-types": "^1.0.1",
     "eslint": "^8.50.0",
     "typescript": "^5.1.6"
