update github action build task with correct command

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,8 @@ jobs:
       - id: test
         name: Run test
         run: |
-          bun test
+          bun run test
       - id: build
         name: Run build
         run: |
-          bun build
+          bun run build
