--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@codaco/protocol-validation",
-  "version": "3.0.0",
+  "version": "3.0.0-alpha.1",
   "main": "dist/index.js",
   "type": "module",
   "types": "dist/index.d.ts",
