--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "@codaco/protocol-validation",
   "version": "3.0.0-alpha.1",
   "main": "dist/index.js",
+  "license": "GPL-3.0-or-later",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/complexdatacollective/protocol-validation.git"
+  },
+  "author": "Complex Data Collective <developers@coda.co>",
   "type": "module",
   "types": "dist/index.d.ts",
   "description": "Utilities for validating and migrating Network Canvas protocol files.",
