--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@codaco/protocol-validation",
-  "version": "3.0.0-alpha.4",
+  "version": "3.0.0",
   "main": "dist/index.js",
   "license": "GPL-3.0-or-later",
   "repository": {
     "type": "git",
     "url": "https://github.com/complexdatacollective/protocol-validation.git"
   },
-  "author": "Complex Data Collective <developers@coda.co>",
+  "author": "Complex Data Collective <hello@complexdatacollective.org>",
   "type": "module",
   "types": "dist/index.d.ts",
   "description": "Utilities for validating and migrating Network Canvas protocol files.",
@@ -21,21 +21,20 @@
     "dist"
   ],
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.7.4",
-    "@typescript-eslint/parser": "^6.7.4",
+    "@types/lodash-es": "^4.17.12",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "bun-plugin-dts": "0.2.1",
-    "bun-types": "^1.0.1",
-    "eslint": "^8.50.0",
+    "bun-types": "^1.1.33",
+    "eslint": "^8.57.1",
     "jszip": "^3.10.1",
-    "typescript": "^5.1.6"
-  },
-  "dependencies": {
+    "typescript": "^5.6.3",
     "@codaco/shared-consts": "^0.0.2",
-    "@types/lodash-es": "^4.17.9",
-    "ajv": "^8.12.0",
+    "ajv": "^8.17.1",
     "chalk": "^5.3.0",
-    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "lodash-es": "^4.17.21",
-    "prettier": "^3.0.3"
-  }
+    "prettier": "^3.3.3"
+  },
+  "dependencies": {}
 }
