--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "GPL-3.0-or-later",
   "repository": {
     "type": "git",
-    "url": "https://github.com/complexdatacollective/protocol-validation.git"
+    "url": "git+https://github.com/complexdatacollective/protocol-validation.git"
   },
   "author": "Complex Data Collective <hello@complexdatacollective.org>",
   "type": "module",
